# finance-json-api

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
tests/: test_healthcheck.py
