[tool.poetry]
name = "finance-json-api"
version = "0.1.0"
description = ""
authors = ["Valter Nepomuceno <valter.nep@proton.me>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pydantic = "^2.5.3"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
